# today

./: .gitignore  Cargo.toml  Dockerfile  README.md
.sqlx/: query-27605bfa253b426db9c13fd1b7e2ed9b54c3506c045c8eaa716004745bef7127.json  query-352cc2adb29cd7bbecf109238e3a54bfcc093003531314a25c70960cc4c1462d.json  query-3e89c6a56904ff37c89dc0bcc170f4706ae2e1943a84f0da329d68bdbdfe398d.json  query-7f898590480b187afa77a3355adb25a4687cf2aa743908da7453adb37e962f3c.json  query-84339c280839b6d74dc120454914583bc7fa7b3658c7c059da0afd9acaf534ae.json  query-887cc5e26d39e7a1ffc19b8cfc50201d90bc1cd7c4301b76cfbe8c6e4996cfc3.json  query-8f535edbc11a1126ee093e5fe246678b9eec01caa5b16f08750c75a8fee9bd36.json  query-99153495cece8ed724cfeec8ad87e43747e6417990964117cd1e5368d9b7a0f4.json  query-a8d829258fb62b8e519704e79b6836148cff5a91323df71fd45a0f1697918561.json  query-c3a63508b0512a66c5cc12d035037203e36e56ec36b39ba97b9919aa28648990.json  query-cd16d97cac668b9b0da2345cb4c1d50489d5cd373f5cd3a4dc783bd13be62307.json  query-d54b144d7c8cb2b3312833f8fddfe466add994882b7d4b692b61461a22e66050.json  query-e647f61ca8e22910fa165cb81124b16b9ca2c781e537f528e64f063fe39080cc.json  query-ef84692760ba951da8ae5c069d38c5f8ce4ab49890eedf4aadbc2091cbee9e5c.json
assets/: script.js  style.css
migrations/: 20240819145433_AddInitialTableStructure.sql  20240822132246_AddDeletedState.sql  20240826082447_AddAccountsConcept.sql  20240826100040_ReassociateAllExistingItemsToSingleAccount.sql  20241103202955_DropAccountConcept.sql
src/: auth.rs  error.rs  main.rs  persistence.rs  router.rs  templates.rs  tests.rs
(+8 files in other folders)
