[package]
name = "today"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
color-eyre = "0.6.3"
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.0", features = ["tracing"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
http-body-util = "0.1.2"
tower-util = "0.3.1"
