[package]
name = "today"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", default-features = false, features = ["now"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
sqlx-bootstrap = { git = "https://github.com/alexander-jackson/sqlx-bootstrap.git", version = "0.1.0" }
tera = "1.20.0"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5.0", features = ["tracing"] }
tower-http = { version = "0.5.2", features = ["fs", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dev-dependencies]
bcrypt = "0.15.1"
http-body-util = "0.1.2"
tower-util = "0.3.1"
